--- a/app/src/main/res/layout/detail_onclick.xml
+++ b/app/src/main/res/layout/detail_onclick.xml
@@ -21,6 +21,11 @@
         android:paddingBottom="15dp"
 
         android:layout_height="150dp"/>
+    <ImageView
+        android:id="@+id/addfav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_favorite_24"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
