--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -32,6 +32,7 @@
     <TextView
         android:id="@+id/txt_title"
         android:text="title"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"/>
@@ -40,22 +41,11 @@
     <TextView
         android:id="@+id/txt_format"
         android:text="format"
+        android:textColor="@color/black"
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
         </LinearLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/fav_btn"
-                android:src="@drawable/ic_baseline_favorite_border_24"
-                android:layout_marginTop="20dp"
-                android:layout_alignParentEnd="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
